# daymate-desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  USER_GUIDE.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  privacy_concern.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
docs/: architecture.md  development.md  release.md
public/music/: README.md
scripts/: capture-window.ps1  check-version.mjs  windows-desktop.ps1
src/: App.css  App.tsx  native.ts  store.test.ts  store.ts  types.ts  windows.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/data/: dailyContent.test.ts  dailyContent.ts
src/services/: aiProviders.ts  dailyTheme.test.ts  dailyTheme.ts  music.test.ts  music.ts
